<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="www.ragnsells.ee.ragnsells.MyUserActivity"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_myuser"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorBackground">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/pb_login"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryLight">

                    <EditText
                        android:id="@+id/et_name_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_name"
                        android:imeActionLabel="@string/action_name_short"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:shadowColor="@color/colorPrimaryLight"
                        android:textColor="@color/colorBlack"
                        android:backgroundTint="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryLight">

                    <EditText
                        android:id="@+id/et_email_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeActionLabel="@string/action_email"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryLight">

                    <EditText
                        android:id="@+id/et_password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:shadowColor="@color/colorPrimaryLight"
                        android:textColor="@color/colorBlack"
                        android:backgroundTint="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryLight">

                    <EditText
                        android:id="@+id/et_phone_number_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Telefoni number"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:shadowColor="@color/colorPrimaryLight"
                        android:textColor="@color/colorBlack"
                        android:backgroundTint="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"/>

                </android.support.design.widget.TextInputLayout>

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_hide_arrow="true" />


                <!--<Button
                    android:id="@+id/btn_register"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_register"
                    android:textStyle="bold" /> -->

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    fancy:fb_borderColor="#FFFFFF"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_defaultColor="@color/colorPrimary"
                    fancy:fb_focusColor="@color/btnhover"
                    fancy:fb_iconPosition="left"
                    fancy:fb_text="REGISTREERU"
                    fancy:fb_textColor="@color/colorWhite" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
